# hw4

./: diabetes_analysis.ipynb  hw4.py  pyproject.toml
diablib/: __init__.py  data_prep.py  evaluation.py  modeling.py  pyproject.toml
diablib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
diablib/diablib.egg-info/: PKG-INFO  SOURCES.txt
grouphelper/: pyproject.toml
grouphelper/grouphelper/: __init__.py  text_tools.py
grouphelper/grouphelper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
