[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diablib"
version = "0.1.0"
description = "Library for diabetes mellitus data analysis"
authors = [{ name = "Olsa Berani" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]


